--- a/exp1.html
+++ b/exp1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<script src="http://d3js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
 
 <style>
 .chart rect { fill: rebeccapurple; }
